# CMU_Mask-R-CNN_ROS

./: CMakeLists.txt  README.md  package.xml
cfg/: config.json
msg/: predictions.msg
src/: cv_converter.py  main.py  model.py
