<?xml version="1.0"?>
<package format="2">
  <name>CMU_Mask_R_CNN</name>
  <version>0.1.0</version>
  <description>Get live Mask-R-CNN predictions from drone images</description>

  <maintainer email="azberger@andrew.cmu.edu">aaron</maintainer>

  <license>BSD</license>

  <url type="website">https://github.com/aaronzberger/CMU_Mask-R-CNN</url>

  <author email="azberger@andrew.cmu.edu">Aaron Berger</author>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>vision_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>

  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>vision_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
